--- a/x-pack/solutions/security/packages/ai-prompt-manager/kibana.jsonc
+++ b/x-pack/solutions/security/packages/ai-prompt-manager/kibana.jsonc
@@ -1,6 +1,6 @@
 {
   "type": "shared-server",
-  "id": "@kbn/ai-prompt-manager",
+  "id": "@kbn/security-ai-prompts",
   "owner": "@elastic/security-generative-ai",
   "group": "security",
   "visibility": "private"
