--- a/x-pack/solutions/security/packages/ai-prompt-manager/package.json
+++ b/x-pack/solutions/security/packages/ai-prompt-manager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kbn/ai-prompt-manager",
+  "name": "@kbn/security-ai-prompts",
   "version": "1.0.0",
   "description": "Utility library for Elasticsearch index management",
   "license": "Elastic License 2.0",
